feat(流水线): 完善状态显示和国际化支持
添加多语言支持并完善流水线状态显示逻辑
重构模态框表单和状态管理
更新模拟数据以支持更多状态类型
优化步骤点击和状态切换逻辑

--- a/src/locales/en-US/home.json
+++ b/src/locales/en-US/home.json
@@ -51,5 +51,18 @@
 	"beautySkincare": "Beauty Skincare",
 	"allChannels": "All Channels",
 	"online": "Online",
-	"site": "Site"
+	"site": "Site",
+
+	"month1": "January",
+	"month2": "February",
+	"month3": "March",
+	"month4": "April",
+	"month5": "May",
+	"month6": "June",
+	"month7": "July",
+	"month8": "August",
+	"month9": "September",
+	"month10": "October",
+	"month11": "November",
+	"month12": "December"
 }
