--- a/src/locales/zh-CN/home.json
+++ b/src/locales/zh-CN/home.json
@@ -51,5 +51,18 @@
 	"beautySkincare": "美容护肤",
 	"allChannels": "全部渠道",
 	"online": "线上",
-	"site": "门店"
+	"site": "门店",
+
+	"month1": "一月",
+	"month2": "二月",
+	"month3": "三月",
+	"month4": "四月",
+	"month5": "五月",
+	"month6": "六月",
+	"month7": "七月",
+	"month8": "八月",
+	"month9": "九月",
+	"month10": "十月",
+	"month11": "十一月",
+	"month12": "十二月"
 }
