feat(登录): 添加用户注册功能
- 在 fake/auth.fake.ts 中添加注册接口模拟
- 新增注册相关多语言文案
- 实现注册表单提交逻辑
- 添加注册 API 请求方法

--- a/src/locales/en-US/authority.json
+++ b/src/locales/en-US/authority.json
@@ -13,6 +13,8 @@
 	"login": "Login",
 	"loginInProgress": "Login in progress ...",
 	"loginSuccess": "Login Successful",
+	"registerSuccess": "Registration Successful",
+	"registerFailed": "Registration Failed",
 	"codeLogin": "Code Login",
 	"forgotPassword": "Forgot Password",
 	"retryAfterText": "{{ count }} seconds later you can try again",
