feat(pipeline): add job list and logs display to pipeline detail
- Add job list and logs display functionality to pipeline detail page
- Implement mock log generation for different job statuses
- Add styling for various log types and job items
- Update localization files with new job-related translations

--- a/src/locales/en-US/common.json
+++ b/src/locales/en-US/common.json
@@ -97,5 +97,6 @@
 	"collapseAll": "Collapse All",
 	"checkAll": "Check All",
 	"cancelAll": "Cancel All",
-	"rebuild": "Rebuild"
+	"rebuild": "Rebuild",
+	"refreshSuccess": "Refreshed successfully"
 }
